--- a/app/src/main/res/layout/control_fragment.xml
+++ b/app/src/main/res/layout/control_fragment.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context=".ui.main.ControlFragment"
     android:orientation="vertical"
-    tools:context=".MainActivity"
     >
 
     <Button
-        android:id="@+id/play"
+        android:id="@+id/play_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/button_padding"
         android:text="@string/play"/>
 
     <Button
-        android:id="@+id/pause"
+        android:id="@+id/pause_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/button_padding"
@@ -23,7 +25,7 @@
         android:enabled="false"/>
 
     <Button
-        android:id="@+id/stop"
+        android:id="@+id/stop_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/button_padding"
@@ -31,14 +33,14 @@
         android:enabled="false"/>
 
     <Button
-        android:id="@+id/skip_to_next"
+        android:id="@+id/skip_to_next_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/button_padding"
         android:text="@string/next"/>
 
     <Button
-        android:id="@+id/skip_to_previous"
+        android:id="@+id/skip_to_previous_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/button_padding"
