--- a/app/src/main/res/layout/control_fragment.xml
+++ b/app/src/main/res/layout/control_fragment.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.ControlFragment"
+    tools:context=".ui.control.ControlFragment"
     android:orientation="vertical"
     >
 
