--- a/app/src/main/res/layout/playlist_item_view.xml
+++ b/app/src/main/res/layout/playlist_item_view.xml
@@ -7,10 +7,17 @@
         android:layout_height="wrap_content"
         >
 
+<!--        <ImageView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            />-->
         <TextView
             android:id="@+id/song_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:layout_margin="12dp"
+            />
 
     </LinearLayout>
 </LinearLayout>
