--- a/app/src/main/res/layout/playlist_item_view.xml
+++ b/app/src/main/res/layout/playlist_item_view.xml
@@ -6,12 +6,18 @@
         <variable
             name="track"
             type="stas.batura.musicproject.musicservice.MusicRepository.Track" />
+
+        <variable
+            name="mainViewModel"
+            type="stas.batura.musicproject.MainAcivityViewModel" />
     </data>
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:onClick="@{() -> mainViewModel.onItemClicked(track.uri)}"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
