--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -21,9 +21,9 @@
                 android:icon="@drawable/ic_menu_share"
                 android:title="share" />
             <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="send" />
+                android:id="@+id/nav_add"
+                android:icon="@drawable/ic_add_circle_outline_black_24dp"
+                android:title="add" />
         </menu>
     </item>
 
