--- a/app/src/main/res/layout/playlist_item_view.xml
+++ b/app/src/main/res/layout/playlist_item_view.xml
@@ -25,18 +25,30 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
 
             <!--        <ImageView-->
             <!--            android:layout_width="match_parent"-->
             <!--            android:layout_height="match_parent"-->
             <!--            />-->
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textSize="24sp"
+                android:layout_weight="1"
+                android:textSize="14sp"
                 android:layout_margin="12dp"
                 app:titleFormatted="@{track}"
+
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:layout_margin="12dp"
+                app:durationFormatted="@{track}"
                 />
 
         </LinearLayout>
