--- a/app/src/main/res/layout/control_fragment_new.xml
+++ b/app/src/main/res/layout/control_fragment_new.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    >
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
     <!-- Timer Display -->
     <LinearLayout
         android:id="@+id/timerDisplay"
@@ -33,17 +33,13 @@
             android:textStyle="bold"/>
     </LinearLayout>
 
-    <!-- Progress Bar/Seek bar -->
-    <SeekBar
-        android:id="@+id/songProgressBar"
-        android:layout_width="fill_parent"
+    <com.google.android.exoplayer2.ui.PlayerControlView
+        android:id="@+id/exoplayer_control"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_above="@id/player_footer_bg"
-        android:paddingLeft="6dp"
-        android:paddingRight="6dp"/>
+        app:show_timeout="0"
+        app:controller_layout_id="@layout/new_exo"
+        />
 
     <!-- Repeat / Shuffle buttons -->
     <LinearLayout
