adding expandable list

--- a/app/src/main/res/layout/playlist_fragment.xml
+++ b/app/src/main/res/layout/playlist_fragment.xml
@@ -26,7 +26,14 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/playlist_recycle_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="300dp" />
+
+<!--            <ExpandableListView-->
+<!--                android:id="@+id/simpleExpandableListView"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:divider="#0f0"-->
+<!--                android:dividerHeight="1dp" />-->
 
             <LinearLayout
                 android:layout_width="match_parent"
