--- a/app/src/main/res/layout/playlist_child_item_view.xml
+++ b/app/src/main/res/layout/playlist_child_item_view.xml
@@ -34,6 +34,7 @@
             <!--            android:layout_height="match_parent"-->
             <!--            />-->
             <TextView
+                android:id="@+id/track_child_title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
