--- a/app/src/main/res/layout/playlist_child_expand.xml
+++ b/app/src/main/res/layout/playlist_child_expand.xml
@@ -1,53 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-<!--    <data>-->
-<!--        <variable-->
-<!--            name="track"-->
-<!--            type="stas.batura.musicproject.musicservice.MusicRepository.Track" />-->
-
-<!--        <variable-->
-<!--            name="mainViewModel"-->
-<!--            type="stas.batura.musicproject.MainAcivityViewModel" />-->
-
-<!--        <variable-->
-<!--            name="viewHolder"-->
-<!--            type="stas.batura.musicproject.ui.playlist.PlaylistAdapter.ViewHolder" />-->
-<!--    </data>-->
+<LinearLayout android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        android:layout_width="match_parent"
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <!--        <ImageView-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="match_parent"-->
+        <!--            />-->
+        <TextView
+            android:id="@+id/track_child_title"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
+            android:layout_margin="12dp"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:textSize="14sp" />
 
-            <!--        <ImageView-->
-            <!--            android:layout_width="match_parent"-->
-            <!--            android:layout_height="match_parent"-->
-            <!--            />-->
-            <TextView
-                android:id="@+id/track_child_title"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="14sp"
-                android:layout_margin="12dp"
-                />
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
+            android:layout_width="wrap_content"
+            android:textSize="14sp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:layout_margin="12dp"
-                />
-
-        </LinearLayout>
     </LinearLayout>
-</layout>
+</LinearLayout>
