change expandadapter interaction

--- a/app/src/main/res/layout/playlist_child_expand.xml
+++ b/app/src/main/res/layout/playlist_child_expand.xml
@@ -22,6 +22,14 @@
             android:textSize="14sp" />
 
         <TextView
+            android:id="@+id/group_test_id"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
+            android:layout_width="wrap_content"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/child_test_id"
             android:layout_height="wrap_content"
             android:layout_margin="12dp"
             android:layout_width="wrap_content"
