--- a/app/src/main/res/layout/playlist_parent_item_view.xml
+++ b/app/src/main/res/layout/playlist_parent_item_view.xml
@@ -9,6 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="parent"
+        android:layout_marginLeft="24dp"
+        android:textSize="16sp"
         />
 
 </LinearLayout>
