--- a/app/src/main/res/layout/playlist_fragment.xml
+++ b/app/src/main/res/layout/playlist_fragment.xml
@@ -43,6 +43,7 @@
                 android:orientation="horizontal">
 
                 <Button
+                    android:id="@+id/add_files_butt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -50,6 +51,7 @@
                     android:text="add" />
 
                 <Button
+                    android:id="@+id/delete_playlist_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
