--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,6 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="backgroundColor">@color/backGroundPrim</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -23,5 +22,7 @@
         <item name="android:layout_margin">12dp</item>
         <item name="android:textSize">24sp</item>
     </style>
+
+<!--    <style name="Toolbar" parent="ThemeOverlay.AppCompat.Light" />-->
 
 </resources>
