--- a/app/src/main/res/layout/song_decor_fragment.xml
+++ b/app/src/main/res/layout/song_decor_fragment.xml
@@ -63,6 +63,12 @@
             trackTitleBinding="@{mainViewModel.currentTrackPlaying}"
             android:textSize="16sp"
             android:gravity="center"
+            android:singleLine="true"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit ="marquee_forever"
+            android:scrollHorizontally="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             />
 
     </LinearLayout>
