adding album image loading

--- a/app/src/main/res/layout/song_decor_fragment.xml
+++ b/app/src/main/res/layout/song_decor_fragment.xml
@@ -36,7 +36,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:layout_gravity="center"
-            android:src="@drawable/image208815" />
+            trackImageBinfing="@{mainViewModel.currentTrackPlaying}" />
 
         <!-- Song Title -->
         <TextView
