--- a/app/src/main/res/layout/playlist_fragment.xml
+++ b/app/src/main/res/layout/playlist_fragment.xml
@@ -23,6 +23,23 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+                <TextView
+                    android:id="@+id/playlist_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    playlistNameBinding="@{playlistViewModel.playlistName}"
+                    android:onClick="@{() -> playlistViewModel.playlistNameClickedFun()}"
+                    android:layout_gravity="center"
+                    android:textSize="20sp"
+                    android:layout_marginTop="12dp"
+                    />
+
+            </LinearLayout>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/playlist_recycle_view"
                 android:layout_width="match_parent"
