--- a/app/src/main/res/layout/control_fragment_new.xml
+++ b/app/src/main/res/layout/control_fragment_new.xml
@@ -41,30 +41,6 @@
         app:controller_layout_id="@layout/new_exo"
         />
 
-    <!-- Repeat / Shuffle buttons -->
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/timerDisplay"
-        android:gravity="center">
-        <!-- Repeat Button -->
-        <ImageButton
-            android:id="@+id/btnRepeat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_menu_rotate"
-            android:layout_marginRight="5dp"
-            android:background="@null"/>
-
-        <!-- Shuffle Button -->
-        <ImageButton
-            android:id="@+id/btnShuffle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_menu_share"
-            android:layout_marginLeft="5dp"
-            android:background="@null"/>
-    </LinearLayout>
    <!-- Player Footer -->
     <LinearLayout
         android:id="@+id/player_footer_bg"
@@ -80,13 +56,23 @@
             android:gravity="center_vertical"
             android:paddingLeft="10dp"
             android:paddingRight="10dp">
+            <!-- Shuffle Button -->
+            <ImageButton
+                android:id="@+id/btnShuffle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_shuffle_black_24dp"
+                android:layout_marginLeft="5dp"
+                android:background="@null"/>
             <!-- Previous Button -->
             <ImageButton
                 android:id="@+id/skip_to_previous_button"
-                android:src="@android:drawable/ic_media_previous"
+                android:src="@drawable/ic_skip_previous_black_24dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@null"/>
+                android:background="@null"
+                android:layout_margin="12dp"
+                />
             <!-- Play Button -->
             <be.rijckaert.tim.animatedvector.FloatingMusicActionButton
                 android:id="@+id/play_pause_button"
@@ -94,25 +80,25 @@
                 android:layout_height="wrap_content"
                 app:backgroundTint="@color/colorAccent"
                 app:mode="playToPause"
+                android:layout_margin="12dp"
                 />
-<!--            <ImageButton-->
-<!--                android:id="@+id/pause_button"-->
-<!--                android:src="@android:drawable/ic_media_pause"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:background="@null"/>-->
-<!--            <ImageButton-->
-<!--                android:id="@+id/play_button"-->
-<!--                android:src="@android:drawable/ic_media_play"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:background="@null"/>-->
             <!-- Next Button -->
             <ImageButton
                 android:id="@+id/skip_to_next_button"
-                android:src="@android:drawable/ic_media_next"
+                android:src="@drawable/ic_skip_next_black_24dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@null"
+                android:layout_margin="12dp"
+                />
+
+            <!-- Repeat Button -->
+            <ImageButton
+                android:id="@+id/btnRepeat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_repeat_black_24dp"
+                android:layout_marginRight="5dp"
                 android:background="@null"/>
 
 
