--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="backGroundPrim">#B9B9B9</color>
+
+    <color name="activeIconsColor">#000000</color>
+    <color name="inactiveIconsColor">#B9B9B9</color>
 </resources>
