adding deletion from playlist

--- a/app/src/main/res/layout/playlist_list_item_view.xml
+++ b/app/src/main/res/layout/playlist_list_item_view.xml
@@ -26,6 +26,7 @@
             android:layout_height="wrap_content"
             playlistNameBinding="@{playlist.name}"
             android:onClick="@{() -> viewHolder.onItemClecked()}"
+            android:maxLines="1"
              />
 
     </LinearLayout>
