--- a/app/src/main/res/layout/playlist_child_expand.xml
+++ b/app/src/main/res/layout/playlist_child_expand.xml
@@ -27,11 +27,26 @@
             android:layout_margin="12dp"
             android:layout_weight="1"
             android:layout_width="0dp"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:maxLines="1"
+            />
 
+        <TextView
+            android:id="@+id/track_child_duration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
+            android:textSize="16sp"
+            android:maxLines="1"
+            />
 
-
-
+        <ImageView
+            android:id="@+id/track_child_options"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_more_vert_black_24dp"
+            android:layout_margin="12dp"
+            />
 
     </LinearLayout>
 </LinearLayout>
