--- a/app/src/main/res/layout/playlist_parent_item_view.xml
+++ b/app/src/main/res/layout/playlist_parent_item_view.xml
@@ -11,6 +11,7 @@
         android:text="parent"
         android:layout_marginLeft="24dp"
         android:textSize="16sp"
+        android:maxLines="1"
         />
 
     <TextView
@@ -20,6 +21,7 @@
         android:text="1985"
         android:layout_marginLeft="24dp"
         android:textSize="16sp"
+        android:maxLines="1"
         />
 
 </LinearLayout>
