--- a/app/src/main/res/layout/song_decor_fragment.xml
+++ b/app/src/main/res/layout/song_decor_fragment.xml
@@ -79,5 +79,15 @@
             app:layout_constraintTop_toBottomOf="@+id/albumTitle"
             />
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/songTitle"
+            android:onClick="@{() -> mainViewModel.getTrackText()}"
+            />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
