--- a/app/src/main/res/layout/playlist_fragment.xml
+++ b/app/src/main/res/layout/playlist_fragment.xml
@@ -29,8 +29,9 @@
                 android:orientation="horizontal" >
                 <TextView
                     android:id="@+id/playlist_name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     playlistNameBinding="@{playlistViewModel.playlistName}"
                     android:onClick="@{() -> playlistViewModel.playlistNameClickedFun()}"
                     android:layout_gravity="center"
@@ -39,6 +40,28 @@
                     android:layout_marginTop="12dp"
                     android:maxLines="1"
                     />
+
+                <ImageView
+                    android:id="@+id/add_files_butt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginRight="24dp"
+                    android:src="@drawable/ic_add_black_24dp"
+                    android:onClick="@{() -> playlistViewModel.addButtonClicked()}"
+                    android:text="add" />
+
+                <ImageView
+                    android:id="@+id/delete_playlist_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginRight="24dp"
+                    android:src="@drawable/ic_delete_forever_black_24dp"
+                    android:onClick="@{() -> playlistViewModel.deleteButtonclicked()}"
+                    android:text="delete" />
 
             </LinearLayout>
 
@@ -53,33 +76,11 @@
             <ExpandableListView
                 android:id="@+id/simpleExpandableListView"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="match_parent"
                 android:divider="#0f0"
                 android:dividerHeight="1dp"
                 android:layout_marginTop="12dp"
                 />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/add_files_butt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:onClick="@{() -> playlistViewModel.addButtonClicked()}"
-                    android:text="add" />
-
-                <Button
-                    android:id="@+id/delete_playlist_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:onClick="@{() -> playlistViewModel.deleteButtonclicked()}"
-                    android:text="delete" />
-            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
