--- a/app/src/main/res/layout/song_decor_fragment.xml
+++ b/app/src/main/res/layout/song_decor_fragment.xml
@@ -79,13 +79,14 @@
             app:layout_constraintTop_toBottomOf="@+id/albumTitle"
             />
 
-        <Button
+        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="text"
+            android:src="@drawable/ic_subtitles_black_24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/songTitle"
+            app:layout_constraintBottom_toTopOf="@+id/albumImage"
             android:onClick="@{() -> mainViewModel.getTrackText()}"
             />
 
