--- a/app/src/main/res/layout/song_decor_fragment.xml
+++ b/app/src/main/res/layout/song_decor_fragment.xml
@@ -35,8 +35,8 @@
             android:layout_height="0dp"
             android:layout_gravity="center"
             android:layout_marginTop="40dp"
-            android:layout_marginLeft="60dp"
-            android:layout_marginRight="60dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
             android:scaleType="centerCrop"
             app:layout_constraintDimensionRatio="H,1:1"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -46,18 +46,29 @@
 
             />
 
-        <!-- Song Title -->
         <TextView
-            android:id="@+id/albumTitle"
+            android:id="@+id/artistTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
             android:textSize="20sp"
             android:textStyle="bold"
-            albumTitleBinding="@{mainViewModel.currentTrackPlaying}"
+            artistTitleBinding="@{mainViewModel.currentTrackPlaying}"
             android:gravity="center"
             app:layout_constraintTop_toBottomOf="@+id/albumImage"
+            />
+
+        <TextView
+            android:id="@+id/albumTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:textSize="16sp"
+            albumTitleBinding="@{mainViewModel.currentTrackPlaying}"
+            android:gravity="center"
+            app:layout_constraintTop_toBottomOf="@id/artistTitle"
             />
 
         <!-- Song Title -->
@@ -88,6 +99,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/albumImage"
             android:onClick="@{() -> mainViewModel.getTrackText()}"
+            android:visibility="gone"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
