--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
 
     <color name="activeIconsColor">#000000</color>
     <color name="inactiveIconsColor">#B9B9B9</color>
+
+    <color name="contrBackColor">#6B8EB8</color>
 </resources>
