--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="backgroundColor">@color/inactiveIconsColor</item>
 <!--        <item name="activeIconsColor">@</item>-->
     </style>
 
@@ -24,6 +25,24 @@
         <item name="android:textSize">24sp</item>
     </style>
 
+    <style name="ExpandParentStyle">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:layout_marginStart">24sp</item>
+        <item name="android:maxLines">1</item>
+    </style>
+
+    <style name="ExpandChildBaseStyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:maxLines">1</item>
+    </style>
+
+    <style name="ExpandChildSmallStyle">
+        <item name="android:textSize">10sp</item>
+        <item name="android:maxLines">1</item>
+
+    </style>
 <!--    <style name="Toolbar" parent="ThemeOverlay.AppCompat.Light" />-->
 
 </resources>
