interaction moved to toolbar

--- a/app/src/main/res/layout/playlist_list_item_view.xml
+++ b/app/src/main/res/layout/playlist_list_item_view.xml
@@ -27,6 +27,7 @@
             playlistNameBinding="@{playlist.name}"
             android:onClick="@{() -> viewHolder.onItemClecked()}"
             android:maxLines="1"
+            android:layout_gravity="right"
              />
 
     </LinearLayout>
