--- a/app/src/main/res/layout/playlist_child_expand.xml
+++ b/app/src/main/res/layout/playlist_child_expand.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout android:layout_height="wrap_content"
+    android:id="@+id/child_item_view"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+
+    >
 
     <LinearLayout
         android:layout_height="wrap_content"
