--- a/app/src/main/res/layout/playlist_fragment.xml
+++ b/app/src/main/res/layout/playlist_fragment.xml
@@ -35,7 +35,9 @@
                 android:maxLines="1"
                 android:onClick="@{() -> playlistViewModel.playlistNameClickedFun()}"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:visibility="gone"
+                />
 
             <ImageView
                 android:id="@+id/add_files_butt"
@@ -46,7 +48,9 @@
                 android:layout_marginRight="24dp"
                 android:onClick="@{() -> playlistViewModel.addButtonClicked()}"
                 android:src="@drawable/ic_add_black_24dp"
-                android:text="add" />
+                android:text="add"
+                android:visibility="gone"
+                />
 
             <ImageView
                 android:id="@+id/delete_playlist_button"
@@ -57,7 +61,9 @@
                 android:layout_marginRight="24dp"
                 android:onClick="@{() -> playlistViewModel.deletePlaylistClicked()}"
                 android:src="@drawable/ic_delete_forever_black_24dp"
-                android:text="delete" />
+                android:text="delete"
+                android:visibility="gone"
+                />
 
         </LinearLayout>
 
