--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,8 +2,26 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_add"
         android:orderInCategory="100"
-        android:title="settings"
-        app:showAsAction="never" />
+        app:showAsAction="always"
+        android:icon="@drawable/ic_add_black_24dp"
+        android:title="add"
+        />
+
+    <item
+        android:id="@+id/action_delete"
+        android:orderInCategory="100"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_delete_forever_black_24dp"
+        android:title="del"
+        />
+
+<!--    <item-->
+<!--        android:id="@+id/action_title"-->
+<!--        android:title="Playlist"-->
+<!--        app:showAsAction="ifRoom"-->
+<!--        -->
+<!--        />-->
+
 </menu>
