--- a/app/src/main/res/layout/song_decor_fragment.xml
+++ b/app/src/main/res/layout/song_decor_fragment.xml
@@ -34,9 +34,9 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_gravity="center"
-            android:layout_marginTop="40dp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
             android:scaleType="centerCrop"
             app:layout_constraintDimensionRatio="H,1:1"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -64,7 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="6dp"
             android:textSize="16sp"
             albumTitleBinding="@{mainViewModel.currentTrackPlaying}"
             android:gravity="center"
@@ -73,17 +73,36 @@
 
         <!-- Song Title -->
         <TextView
-            android:id="@+id/songTitle"
+            android:id="@+id/songTitleMove"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="6dp"
             trackTitleBinding="@{mainViewModel.currentTrackPlaying}"
             android:textSize="16sp"
             android:gravity="center"
             android:singleLine="true"
             android:ellipsize="marquee"
             android:marqueeRepeatLimit ="marquee_forever"
+            android:scrollHorizontally="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            app:layout_constraintTop_toBottomOf="@+id/albumTitle"
+            android:visibility="gone"
+            />
+
+        <!-- Song Title -->
+        <TextView
+            android:id="@+id/songTitleStat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="6dp"
+            trackTitleBindingConst="@{mainViewModel.currentTrackPlaying}"
+            android:textSize="16sp"
+            android:gravity="center"
+            android:singleLine="true"
+            android:ellipsize="marquee"
             android:scrollHorizontally="true"
             android:focusable="true"
             android:focusableInTouchMode="true"
