--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,6 +8,11 @@
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_camera"
             android:title="home" />
+
+        <item
+            android:id="@+id/find_text"
+            android:icon="@drawable/ic_subtitles_black_24dp"
+            android:title="find track lyrics"/>
     </group>
 
     <item android:title="Communicate">
@@ -15,7 +20,7 @@
             <item
                 android:id="@+id/nav_add"
                 android:icon="@drawable/ic_add_circle_outline_black_24dp"
-                android:title="add" />
+                android:title="add playlist" />
 
         </menu>
     </item>
